--- a/Làm lại.html
+++ b/Làm lại.html
@@ -29,11 +29,11 @@
             </ul>
         </div>
         <!-- Menu Mobile -->
-        <div class="menu-mobile">
-            <div class="menu-list-mobile">
-                <div class="menu-line-item"></div>
-                <div class="menu-line-item"></div>
-                <div class="menu-line-item"></div>
+        <div class="m-mobile">
+            <div class="m-mobile-list">
+                <div class="m-line-item"></div>
+                <div class="m-line-item"></div>
+                <div class="m-line-item"></div>
             </div>
         </div>
 
@@ -59,7 +59,40 @@
     </nav>
 
     <!-- Slider -->
-
+    <div id="slide-holder" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="picture/NESTSPACEDESIGN-cover-1.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+          <div class="carousel-item">
+            <img src="picture/NESTSPACEDESIGN-cover-2.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+          <div class="carousel-item">
+            <img src="picture/NESTSPACEDESIGN-cover-3.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+          <div class="carousel-item">
+            <img src="picture/NESTSPACEDESIGN-cover-4.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+          <div class="carousel-item">
+            <img src="picture/NESTSPACEDESIGN-cover-5.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+          <div class="carousel-item">
+            <img src="picture/NESTSPACEDESIGN-cover-6.jpg" class="d-block w-100" alt="Slide">
+            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#slide-holder" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#slide-holder" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
     <!--Quote-->
     <div class="quote">
 
