--- a/Làm lại.html
+++ b/Làm lại.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="nav-bar">
-            <div class="menu">
+        <div class="menu">
             <ul class="menu-list">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -49,82 +49,130 @@
                     </svg></li>
                 <li class="instagram-logo">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#0F0F0F"/>
-                        <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#0F0F0F"/>
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z" fill="#0F0F0F"/>
-                        </svg>
-                </li>    
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                            fill="#0F0F0F" />
+                        <path
+                            d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z"
+                            fill="#0F0F0F" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z"
+                            fill="#0F0F0F" />
+                    </svg>
+                </li>
             </ul>
         </div>
     </nav>
 
     <!-- Slider -->
-    <div id="slide-holder" class="carousel slide" data-bs-ride="carousel">
+    <div id="slide-holder" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="picture/NESTSPACEDESIGN-cover-1.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
-          <div class="carousel-item">
-            <img src="picture/NESTSPACEDESIGN-cover-2.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
-          <div class="carousel-item">
-            <img src="picture/NESTSPACEDESIGN-cover-3.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
-          <div class="carousel-item">
-            <img src="picture/NESTSPACEDESIGN-cover-4.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
-          <div class="carousel-item">
-            <img src="picture/NESTSPACEDESIGN-cover-5.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
-          <div class="carousel-item">
-            <img src="picture/NESTSPACEDESIGN-cover-6.jpg" class="d-block w-100" alt="Slide">
-            <div><button class="more-btn"><a href="#">IGNOTUS | More</a></button></div>
-          </div>
+            <div class="carousel-item active">
+                <img src="picture/NESTSPACEDESIGN-cover-1.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
+            <div class="carousel-item">
+                <img src="picture/NESTSPACEDESIGN-cover-2.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
+            <div class="carousel-item">
+                <img src="picture/NESTSPACEDESIGN-cover-3.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
+            <div class="carousel-item">
+                <img src="picture/NESTSPACEDESIGN-cover-4.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
+            <div class="carousel-item">
+                <img src="picture/NESTSPACEDESIGN-cover-5.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
+            <div class="carousel-item">
+                <img src="picture/NESTSPACEDESIGN-cover-6.jpg" class="d-block w-100" alt="Slide">
+                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#slide-holder" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon"></span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#slide-holder" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon"></span>
         </button>
-      </div>
+    </div>
     <!--Quote-->
     <div class="quote">
-
+        <div class="quote-container">
+        <h2 style="line-height: 1.6;">Crafting Soulful Spaces and Embrace Diversity</h2>
+        <p style="line-height: 1.6;">Life has no standard answer; the same is valid for spatial design. NestSpace Design, a Taipei-based interior
+            studio, believes there are no fixed solutions in design. Instead, we are driven by a commitment to
+            sustainability and a resolve to create unique architectural narratives with every renovation journey. We
+            continuously push the boundaries of innovation to provide bespoke and beautiful outcomes that benefit our
+            clients and the environment. Our approach goes beyond creating new places. To us, a passionate set is life
+            itself, and a house with a soul is the true definition of home.</p>
+        </div>
     </div>
 
     <!--Selected Projects-->
+<div class="project-holder">
+    <div class="project-container">
     <div class="project-header">
-
+        <div class="project-line"></div>
+        <p>Selected Projects</p>
+        <div class="project-line"></div>
     </div>
     <div class="project-collection">
         <div class="project-item">
             <div class="project-content">
+                <h2>Eternity / 1 of 3</h2>
+                <p>Open the graceful scenery of the space</p>
+                <button class="see-more-btn"><a href="#">See More</a></button>
             </div>
             <div class="project-img">
-
+                <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" width="20px" version="1.1" id="Layer_1" viewBox="0 0 512.883 512.883" xml:space="preserve">
+                    <path style="fill:#CB1F24;" d="M256.441,0c-141.241,0-256,114.759-256,256c0,105.048,62.676,195.09,153.6,234.814  c-0.883-17.655,0-39.724,4.414-59.145c5.297-21.186,32.662-139.476,32.662-139.476s-7.945-16.772-7.945-40.607  c0-37.959,22.069-66.207,49.434-66.207c22.952,0,34.428,17.655,34.428,38.841c0,22.952-15.007,58.262-22.952,90.924  c-6.179,27.366,13.241,49.434,40.607,49.434c48.552,0,81.214-62.676,81.214-135.945c0-56.497-37.959-97.986-106.814-97.986  c-77.683,0-126.234,58.262-126.234,122.703c0,22.069,6.179,37.959,16.772,50.317c4.414,5.297,5.297,7.945,3.531,14.124  c-0.883,4.414-4.414,15.89-5.297,20.303c-1.766,6.179-7.062,8.828-13.241,6.179c-36.193-15.007-52.083-53.848-52.083-97.986  c0-72.386,60.91-159.779,182.731-159.779c97.986,0,162.428,70.621,162.428,146.538c0,100.634-55.614,175.669-137.71,175.669  c-27.366,0-53.848-15.007-62.676-31.779c0,0-15.007,59.145-17.655,70.621c-5.297,19.421-15.89,39.724-25.6,54.731  c22.952,7.062,47.669,10.593,72.386,10.593c141.241,0,256-114.759,256-256S397.683,0,256.441,0"/>
+                    </svg>
             </div>
         </div>
-    </div>
+        <div class="project-item row-reverse">
+                <div class="project-content">
+                    <h2>Revival House / 2 of 3</h2>
+                    <p>An unconventional dwelling dedicated to dancing</p>
+                    <button class="see-more-btn"><a href="#">See More</a></button>
+                </div>
+                <div class="project-img">
+                    <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" width="20px" version="1.1" id="Layer_1" viewBox="0 0 512.883 512.883" xml:space="preserve">
+                        <path style="fill:#CB1F24;" d="M256.441,0c-141.241,0-256,114.759-256,256c0,105.048,62.676,195.09,153.6,234.814  c-0.883-17.655,0-39.724,4.414-59.145c5.297-21.186,32.662-139.476,32.662-139.476s-7.945-16.772-7.945-40.607  c0-37.959,22.069-66.207,49.434-66.207c22.952,0,34.428,17.655,34.428,38.841c0,22.952-15.007,58.262-22.952,90.924  c-6.179,27.366,13.241,49.434,40.607,49.434c48.552,0,81.214-62.676,81.214-135.945c0-56.497-37.959-97.986-106.814-97.986  c-77.683,0-126.234,58.262-126.234,122.703c0,22.069,6.179,37.959,16.772,50.317c4.414,5.297,5.297,7.945,3.531,14.124  c-0.883,4.414-4.414,15.89-5.297,20.303c-1.766,6.179-7.062,8.828-13.241,6.179c-36.193-15.007-52.083-53.848-52.083-97.986  c0-72.386,60.91-159.779,182.731-159.779c97.986,0,162.428,70.621,162.428,146.538c0,100.634-55.614,175.669-137.71,175.669  c-27.366,0-53.848-15.007-62.676-31.779c0,0-15.007,59.145-17.655,70.621c-5.297,19.421-15.89,39.724-25.6,54.731  c22.952,7.062,47.669,10.593,72.386,10.593c141.241,0,256-114.759,256-256S397.683,0,256.441,0"/>
+                        </svg>
+                </div>
+        </div>        
+        <div class="project-item">
+            <div class="project-content">
+                <h2>Jardín del Sol  / 3 of 3</h2>
+                <p>Combining the idea of a sun-filled greenhouse with the wfh conditions</p>
+                <button class="see-more-btn"><a href="#">See More</a></button>
+            </div>
+            <div class="project-img">
+                <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" width="20px" version="1.1" id="Layer_1" viewBox="0 0 512.883 512.883" xml:space="preserve">
+                    <path style="fill:#CB1F24;" d="M256.441,0c-141.241,0-256,114.759-256,256c0,105.048,62.676,195.09,153.6,234.814  c-0.883-17.655,0-39.724,4.414-59.145c5.297-21.186,32.662-139.476,32.662-139.476s-7.945-16.772-7.945-40.607  c0-37.959,22.069-66.207,49.434-66.207c22.952,0,34.428,17.655,34.428,38.841c0,22.952-15.007,58.262-22.952,90.924  c-6.179,27.366,13.241,49.434,40.607,49.434c48.552,0,81.214-62.676,81.214-135.945c0-56.497-37.959-97.986-106.814-97.986  c-77.683,0-126.234,58.262-126.234,122.703c0,22.069,6.179,37.959,16.772,50.317c4.414,5.297,5.297,7.945,3.531,14.124  c-0.883,4.414-4.414,15.89-5.297,20.303c-1.766,6.179-7.062,8.828-13.241,6.179c-36.193-15.007-52.083-53.848-52.083-97.986  c0-72.386,60.91-159.779,182.731-159.779c97.986,0,162.428,70.621,162.428,146.538c0,100.634-55.614,175.669-137.71,175.669  c-27.366,0-53.848-15.007-62.676-31.779c0,0-15.007,59.145-17.655,70.621c-5.297,19.421-15.89,39.724-25.6,54.731  c22.952,7.062,47.669,10.593,72.386,10.593c141.241,0,256-114.759,256-256S397.683,0,256.441,0"/>
+                    </svg>
+            </div>
+        </div>        
+        </div>
     <div class="project-footer">
-
+        <a href="#">View All Projects</a>
     </div>
+</div>
 
     <!--Slider-Contact-->
     <div class="slider-contact">
         <div class="title">
-
+            <p>Tailoring a Next Space</p>
         </div>
-        <div class="contact-btn">
-
-        </div>
+        <button class="contact-btn"><a href="#">Contact Us</a></button>
     </div>
-
     <!--Footer-->
     <div class="footer">
         <div class="contact-footer">
