--- a/Làm lại.html
+++ b/Làm lại.html
@@ -21,11 +21,11 @@
     <nav class="nav-bar">
         <div class="menu">
             <ul class="menu-list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Impression</a></li>
+                <li><a href="https://www.nestspacedesign.com/about" target="_blank">About</a></li>
+                <li><a href="https://www.nestspacedesign.com/contact" target="_blank">Contact</a></li>
+                <li><a href="https://www.nestspacedesign.com/press" target="_blank">Press</a></li>
+                <li><a href="https://www.nestspacedesign.com/portfolio" target="_blank">Portfolio</a></li>
+                <li><a href="https://www.nestspacedesign.com/impression" target="_blank">Impression</a></li>
             </ul>
         </div>
         <!-- Menu Mobile -->
@@ -37,17 +37,20 @@
             </div>
         </div>
 
-        <div class="logo">
+        <div class="logo"><a href="#">
             <img src="picture/coverGL02.png" alt="Logo">
+        </a>
         </div>
         <div class="social-media">
             <ul class="social-media-list">
-                <li class="facebook-logo"><svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="20px"
+                <li class="facebook-logo"><a href="https://www.facebook.com/nestspace.design" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="20px"
                         height="20px" viewBox="0 0 32 32">
                         <path
                             d="M21.95 5.005l-3.306-.004c-3.206 0-5.277 2.124-5.277 5.415v2.495H10.05v4.515h3.317l-.004 9.575h4.641l.004-9.575h3.806l-.003-4.514h-3.803v-2.117c0-1.018.241-1.533 1.566-1.533l2.366-.001.01-4.256z" />
-                    </svg></li>
-                <li class="instagram-logo">
+                    </svg></a>
+                </li>
+                <li class="instagram-logo"><a href="https://www.instagram.com/nestspacedesign/" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" fill="none">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
@@ -58,7 +61,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z"
                             fill="#0F0F0F" />
-                    </svg>
+                    </svg></a>
                 </li>
             </ul>
         </div>
@@ -69,27 +72,27 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="picture/NESTSPACEDESIGN-cover-1.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/ignotus">IGNOTUS | More</a></button>
             </div>
             <div class="carousel-item">
                 <img src="picture/NESTSPACEDESIGN-cover-2.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/transitions">Transitions | More</a></button>
             </div>
             <div class="carousel-item">
                 <img src="picture/NESTSPACEDESIGN-cover-3.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/continuum">Continuum | More</a></button>
             </div>
             <div class="carousel-item">
                 <img src="picture/NESTSPACEDESIGN-cover-4.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/432hz">432Hz | More</a></button>
             </div>
             <div class="carousel-item">
                 <img src="picture/NESTSPACEDESIGN-cover-5.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/duet-apartment">Duet Apartment | More</a></button>
             </div>
             <div class="carousel-item">
                 <img src="picture/NESTSPACEDESIGN-cover-6.jpg" class="d-block w-100" alt="Slide">
-                <button class="more-btn"><a href="#">IGNOTUS | More</a></button>
+                <button class="more-btn"><a href="https://www.nestspacedesign.com/portfolio/riverside-abode">Riverside Abode | More</a></button>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#slide-holder" data-bs-slide="prev">
@@ -125,7 +128,7 @@
             <div class="project-content">
                 <h2>Eternity / 1 of 3</h2>
                 <p>Open the graceful scenery of the space</p>
-                <button class="see-more-btn"><a href="#">See More</a></button>
+                <button class="see-more-btn"><a href="https://www.nestspacedesign.com/portfolio/eternity" target="_blank">See More</a></button>
             </div>
             <div class="project-img">
                 <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
@@ -138,10 +141,10 @@
                 <div class="project-content">
                     <h2>Revival House / 2 of 3</h2>
                     <p>An unconventional dwelling dedicated to dancing</p>
-                    <button class="see-more-btn"><a href="#">See More</a></button>
+                    <button class="see-more-btn"><a href="https://www.nestspacedesign.com/portfolio/revival-house-echo-of-the-body" target="_blank">See More</a></button>
                 </div>
                 <div class="project-img">
-                    <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
+                    <img src="picture/NestSpaceDesign_revival-p2.jpg" alt="Project">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" width="20px" version="1.1" id="Layer_1" viewBox="0 0 512.883 512.883" xml:space="preserve">
                         <path style="fill:#CB1F24;" d="M256.441,0c-141.241,0-256,114.759-256,256c0,105.048,62.676,195.09,153.6,234.814  c-0.883-17.655,0-39.724,4.414-59.145c5.297-21.186,32.662-139.476,32.662-139.476s-7.945-16.772-7.945-40.607  c0-37.959,22.069-66.207,49.434-66.207c22.952,0,34.428,17.655,34.428,38.841c0,22.952-15.007,58.262-22.952,90.924  c-6.179,27.366,13.241,49.434,40.607,49.434c48.552,0,81.214-62.676,81.214-135.945c0-56.497-37.959-97.986-106.814-97.986  c-77.683,0-126.234,58.262-126.234,122.703c0,22.069,6.179,37.959,16.772,50.317c4.414,5.297,5.297,7.945,3.531,14.124  c-0.883,4.414-4.414,15.89-5.297,20.303c-1.766,6.179-7.062,8.828-13.241,6.179c-36.193-15.007-52.083-53.848-52.083-97.986  c0-72.386,60.91-159.779,182.731-159.779c97.986,0,162.428,70.621,162.428,146.538c0,100.634-55.614,175.669-137.71,175.669  c-27.366,0-53.848-15.007-62.676-31.779c0,0-15.007,59.145-17.655,70.621c-5.297,19.421-15.89,39.724-25.6,54.731  c22.952,7.062,47.669,10.593,72.386,10.593c141.241,0,256-114.759,256-256S397.683,0,256.441,0"/>
                         </svg>
@@ -151,10 +154,10 @@
             <div class="project-content">
                 <h2>Jardín del Sol  / 3 of 3</h2>
                 <p>Combining the idea of a sun-filled greenhouse with the wfh conditions</p>
-                <button class="see-more-btn"><a href="#">See More</a></button>
+                <button class="see-more-btn"><a href="https://www.nestspacedesign.com/portfolio/jardin-del-sol" target="_blank">See More</a></button>
             </div>
             <div class="project-img">
-                <img src="picture/NestSpaceDesign_eternity-p1.jpg" alt="Project">
+                <img src="picture/NestSpaceDesign_jardin-p3.jpg" alt="Project">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" width="20px" version="1.1" id="Layer_1" viewBox="0 0 512.883 512.883" xml:space="preserve">
                     <path style="fill:#CB1F24;" d="M256.441,0c-141.241,0-256,114.759-256,256c0,105.048,62.676,195.09,153.6,234.814  c-0.883-17.655,0-39.724,4.414-59.145c5.297-21.186,32.662-139.476,32.662-139.476s-7.945-16.772-7.945-40.607  c0-37.959,22.069-66.207,49.434-66.207c22.952,0,34.428,17.655,34.428,38.841c0,22.952-15.007,58.262-22.952,90.924  c-6.179,27.366,13.241,49.434,40.607,49.434c48.552,0,81.214-62.676,81.214-135.945c0-56.497-37.959-97.986-106.814-97.986  c-77.683,0-126.234,58.262-126.234,122.703c0,22.069,6.179,37.959,16.772,50.317c4.414,5.297,5.297,7.945,3.531,14.124  c-0.883,4.414-4.414,15.89-5.297,20.303c-1.766,6.179-7.062,8.828-13.241,6.179c-36.193-15.007-52.083-53.848-52.083-97.986  c0-72.386,60.91-159.779,182.731-159.779c97.986,0,162.428,70.621,162.428,146.538c0,100.634-55.614,175.669-137.71,175.669  c-27.366,0-53.848-15.007-62.676-31.779c0,0-15.007,59.145-17.655,70.621c-5.297,19.421-15.89,39.724-25.6,54.731  c22.952,7.062,47.669,10.593,72.386,10.593c141.241,0,256-114.759,256-256S397.683,0,256.441,0"/>
                     </svg>
@@ -162,7 +165,7 @@
         </div>        
         </div>
     <div class="project-footer">
-        <a href="#">View All Projects</a>
+        <a href="https://www.nestspacedesign.com/portfolio" target="_blank">View All Projects</a>
     </div>
 </div>
 
@@ -171,17 +174,17 @@
         <div class="title">
             <p>Tailoring a Next Space</p>
         </div>
-        <button class="contact-btn"><a href="#">Contact Us</a></button>
+        <button class="contact-btn"><a href="https://www.nestspacedesign.com/contact" target="_blank">Contact Us</a></button>
     </div>
     <!--Footer-->
     <div class="footer">
         <div class="contact-footer">
             <ul class="contact-footer-item">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="https://www.nestspacedesign.com/about" target="_blank">About</a></li>
+                <li><a href="https://www.nestspacedesign.com/contact" target="_blank">Contact</a></li>
+                <li><a href="https://www.nestspacedesign.com/portfolio" target="_blank">Portfolio</a></li>
+                <li><a href="https://www.facebook.com/nestspace.design" target="_blank">Facebook</a></li>
+                <li><a href="https://www.instagram.com/nestspacedesign/" target="_blank">Instagram</a></li>
             </ul>
         </div>
         <div class="slogan">
