--- a/Thử.html
+++ b/Thử.html
@@ -300,15 +300,28 @@
             <a href="#"><img src="picture/coverGL02.png" alt="NestSpace 巢空間室內設計"></a>
         </div>
         <!--Social Media-->
-        <div class="social-media">
+        <div class="social-media" style="gap: 10px;">
             <a href="https://www.facebook.com/nestspace.design" target="_blank"><img
                     src="picture/png-clipart-business-management-coworking-service-art-facebook-company-service.png"
                     alt="Facebook"></a>
             <a href="https://www.instagram.com/nestspacedesign/" target="_blank"><img src="picture/images.jpg"
                     alt="Instagram"></a>
+            <a style="overflow: hidden; cursor: pointer;">Sign in</a>
+            <a style="overflow: hidden; cursor: pointer;">Sign up</a>
         </div>
     </nav>
 
+<div id="wrapper">
+    <div class="sign-up-form">
+        <h2>Create an Account</h2>
+        <div class="form-group">
+            <input type="text" class="email" placeholder="Email">
+            <input type="text" class="username" placeholder="Username">
+            <input type="password" class="password" placeholder="Password">
+            <input type="password" class="cfpassword" placeholder="Confirm Password">
+        </div>
+    </div>
+</div>
     <!--Highlight Projects-->
     <div id="slide-container" class="carousel slide">
         <!--Ảnh 1-->
